<resources>
    <string name="app_name">FOTE Walkathon</string>
    <string name="register_using_facebook">Register using Facebook</string>
    <string name="t_shirt_size">T-Shirt Size</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="name">Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="surname">Surname</string>
    <string name="next_of_kin_phone">Next of kin phone</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="email_address">Email Address</string>
    <string name="your_contact_hone">Your Contact hone</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="your_country">Your Country</string>
    <string name="nationality">Nationality</string>
    <string name="company_being_represented">Company represented</string>
    <string name="save">Save</string>
    <string name="company">Company</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="update">Update</string>
    <string name="reg">REGISTER</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION!!!</string>
    <string name="google_maps_key" />
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="friends_of_environment_logo">Friends of Environment Logo</string>
    <string name="the_friends_of_environment">The 2018 Friends of the Environment will be hosting the 9th Edition of the Walkathon. The 2018 walkathon will be from Cross-Dete to Binga covering a distance of 150km. The walk will be held from Tuesday 27 November 2018 to 30 November 2018 and will be capped by the official unveiling of Siabuwa High School Tree Seedling Nursery in Binga sponsored by Old Mutual. A total of 120 000 trees will be planted during this year’s walkathon.</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="custom_image">Custom Image</string>
</resources>